--- a/other/jquery/1_滑动门.html
+++ b/other/jquery/1_滑动门.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!-- 实例地址 http://www.codefans.net/jscss/code/2947.shtml -->
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>滑动门切换，jQuery层切换代码</title>
 		<script type="text/javascript" src="http://www.codefans.net/ajaxjs/jquery-1.6.2.min.js"></script>
+
+		<!--  滚动门js核心代码   begin -->
 		<script type="text/javascript">
 		$(function(){
 				$("ul li").each(function(i){
@@ -14,6 +17,8 @@
 					})
 				})
 		</script>
+		<!--  滚动门js核心代码 end  -->
+
 		<style type="text/css">
 		*{ margin:0; padding:0; font-size:12px;}
 		ul li{ list-style:none; float:left; background-color:#999; cursor:pointer; width:100px; height:25px; line-height:25px; text-align:center;}
